# llm-bbox

bbox/: README.md  TOML_CONFIG_README.md  config.toml  pyproject.toml
bbox/code/: README.md  boot.py  button_matrix.py  config.py  funky_switch.py  main.py  rgb_leds.py  rotary_encoders.py  toml_config_example.py  usb_hid.py
bbox/docs/: assembly_guide.md  customization_guide.md  wiring_diagram.md
bbox/docs/images/: button_box_ascii_art.txt
bbox/pcb/: bill_of_materials.csv  manufacturing_guide.md  pcb_layout_description.txt  schematic_description.txt
micropython/: pyvenv.cfg
